[package]
name = "benchmark"
version = "0.1.0"
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
bincode = "1.2.1"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
clap = { version = "3.0.5", features = ["derive"] }
bytes = { version = "1", features = ["serde"] }
rdma-sys = { git = "https://github.com/datenlord/rdma-sys" }
libc = "0.2"
rand = "0.8.3"